--- a/scripts/tile_right_one_thirds/metadata.desktop
+++ b/scripts/tile_right_one_thirds/metadata.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Name=Tile Left Two Thirds
-Comment=Tiles the active window to the left two thirds of the screen
+Name=Tile Right One Thirds
+Comment=Tiles the active window to the right one thirds of the screen
 Icon=preferences-system-windows-script-test
 
 X-Plasma-API=javascript
@@ -8,7 +8,7 @@ X-Plasma-MainScript=code/main.js
 
 X-KDE-PluginInfo-Author=Your Name
 X-KDE-PluginInfo-Email=your.email@example.com
-X-KDE-PluginInfo-Name=tilelefttwo
+X-KDE-PluginInfo-Name=tile_right_one_thirds
 X-KDE-PluginInfo-Version=1.0
 X-KDE-PluginInfo-License=GPL v3
 X-KDE-PluginInfo-EnabledByDefault=true
